--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -136,3 +136,19 @@ a.label-sorter:hover{
   margin-right: 10px;
 }
 
+.nav>li>a:hover { 
+  background-color: #fffff !important;
+}
+
+.nav > li > a:hover, .nav > li > a:focus {  
+  background-color: #fffff !important;
+}
+
+.nav > li > a:hover, .nav > li > a:focus {  
+  background-color: #fffff !important;
+}
+
+.label-sorter{
+  background-color: #fff !important;
+  cursor: default !important;
+}
