--- a/app/views/flights.html
+++ b/app/views/flights.html
@@ -55,7 +55,7 @@
 
 		<div class="form-group has-success has-feedback">
 		    <label class="control-label" for="inputSuccess4">Arrival Date</label>
-		    <input type="text"  disabled="disabled" value="New Delhi" placeholder="Return Date" class="form-control" id="inputSuccess4" aria-describedby="inputSuccess4Status">
+		    <input type="text"  disabled="disabled" placeholder="Return Date" class="form-control" id="inputSuccess4" aria-describedby="inputSuccess4Status">
 		    <span class="glyphicon glyphicon-ok form-control-feedback" aria-hidden="true"></span>
 		    <span id="inputSuccess4Status" class="sr-only">(success)</span>
 		  </div>
